vlib/v/checker/tests/unknown_var_assign.vv
fn main() {
	x = 'hello v'
}
